# synthator

./: .dockerignore  .gitignore  Dockerfile  LICENCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
pipeline/: main.nf  nextflow.config
src/synthator/: __init__.py  batch.py  context.py  input.py  output.py  transform.py
tests/: conftest.py  test_batch.py  test_cli.py  test_context.py  test_transform.py
