[project]
name = "synthator"
version = "0.1.0"
description = "Annotate variant index with Models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag>=1.0",
    "aiohttp>=3.13.3",
    "alphagenome-research",
    "anndata>=0.12.9",
    "asyncio>=4.0.0",
    "duckdb>=1.4.4",
    "gcsfs>=2026.2.0",
    "ipython>=9.10.0",
    "loguru>=0.7.3",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "typer>=0.23.1",
    "zarr[storage]>=3.1.5",
]
[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
alphagenome-research = { git = "https://github.com/google-deepmind/alphagenome_research.git" }

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipython>=9.10.0",
]

[project.scripts]
synthator = "synthator:app"
